# cowpybaraMQ

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  Dockerfile  README.md  benchmark_report.md  benchmark_results.csv  docker-compose.yml  pyproject.toml  pytest.ini  pytest_out.txt  recovery_benchmark_report.txt  requirements.txt  test_cli.py  test_networking.py  test_partition_bug.py
cmd/: __init__.py  benchmark.py  broker.py  cluster_admin.py  consumer.py  dashboard.py  producer.py  status.py
cowpybaramq.egg-info/: PKG-INFO  SOURCES.txt
docs/: architecture.md  consumer-groups.md  partitions.md  protocol.md  storage.md
internal/: broker.py  cluster.py  compression.py  config.py  groups.py  message.py  metrics.py  networking.py  offsets.py  partition.py  protocol.py  replication.py  storage.py  topic.py
logs-51033/: benchmark-topic-0.jsonl
logs-58809/: e2e-topic-0.jsonl
logs-59737/: bench-none-100-0.jsonl
logs-59872/: bench-gzip-100-0.jsonl
logs-60359/: bench-none-10-0.jsonl
logs-60456/: bench-gzip-10-0.jsonl
logs-60653/: bench-gzip-100-0.jsonl
logs-60754/: e2e-topic-2.jsonl
logs-60756/: e2e-topic-0.jsonl
logs-64649/: bench-gzip-10-0.jsonl
storage/: group_offsets.json
test_logs_tmp/: comp-topic-0.jsonl
test_partition_offset_bug/: test_topic-0.jsonl
tests/: conftest.py  test_broker.py  test_broker_recovery.py  test_cluster_e2e.py  test_cluster_integration.py  test_compression.py  test_compression_integration.py  test_consumer.py  test_graceful_shutdown.py  test_groups.py  test_integration.py  test_log_integrity.py  test_metrics.py  (+11 more)
(+2 files in other folders)
