[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cowpybaramq"
version = "0.1.0"
description = "A distributed log-based message broker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Production dependencies would go here
]

[tool.setuptools]
packages = ["internal"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
